--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -44,7 +44,7 @@ Caused by: ElementClickInterceptedException: element click intercepted: Element 
 	at com.codeborne.selenide.impl.SelenideElementProxy.invoke(SelenideElementProxy.java:65)
 	at com.sun.proxy.$Proxy4.click(Unknown Source)
 	at tytarchuk.AutoriaResultPage.goThroughAllPagesAndCollectData(AutoriaResultPage.java:30)
-	at tytarchuk.AutoriaSearchTest.searchByAllFieldsToFindOldestAndCheapestCar(AutoriaSearchTest.java:28)
+	at verifyIfFiltersWork(AutoriaSearchTest.java:28)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
